// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton should render when closed 1`] = `
<SplitButton__FlexContainer>
  <PrimaryButton
    onClick={[Function]}
  >
    Add checkbox
  </PrimaryButton>
  <Popout
    horizontalAlignment="right"
    offsetY="100%"
    onToggleOpen={[Function]}
    open={false}
    transition={[Function]}
    trigger={<MenuButton />}
    verticalAlignment="top"
  >
    <ButtonGroup>
      <Button
        onClick={[Function]}
        secondary={true}
      >
        Add other answer
      </Button>
    </ButtonGroup>
  </Popout>
</SplitButton__FlexContainer>
`;

exports[`SplitButton should render when open 1`] = `
<SplitButton__FlexContainer>
  <PrimaryButton
    onClick={[Function]}
  >
    Add checkbox
  </PrimaryButton>
  <Popout
    horizontalAlignment="right"
    offsetY="100%"
    onToggleOpen={[Function]}
    open={true}
    transition={[Function]}
    trigger={<MenuButton />}
    verticalAlignment="top"
  >
    <ButtonGroup>
      <Button
        onClick={[Function]}
        secondary={true}
      >
        Add other answer
      </Button>
    </ButtonGroup>
  </Popout>
</SplitButton__FlexContainer>
`;
